[gd_scene load_steps=23 format=3 uid="uid://dh133upj5cmbe"]

[ext_resource type="Script" path="res://Scripts/Game6/room.gd" id="1_4eumd"]
[ext_resource type="Texture2D" uid="uid://1y34nxe7pwg0" path="res://Assets/Sprites/Game6/background.png" id="1_lkoor"]
[ext_resource type="PackedScene" uid="uid://bws0cq6a1rgtu" path="res://Scenes/Game6/ladder.tscn" id="3_lx5xs"]
[ext_resource type="Texture2D" uid="uid://dhel8rn3fihuh" path="res://Assets/Sprites/Game6/Wall.png" id="4_a60m6"]
[ext_resource type="Script" path="res://Scripts/Game6/DynamicItems.gd" id="5_1xq4r"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_c4kmj"]
load_path = "res://.godot/imported/Wall.png-7baf2b11d2ebac5ba2b2522f540328db.ctex"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0v2g"]
size = Vector2(45, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vpkyf"]
size = Vector2(45, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2tk7"]
size = Vector2(45, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blwk7"]
size = Vector2(45, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h0q65"]
size = Vector2(1000, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6uba"]
size = Vector2(1000, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rq74i"]
size = Vector2(500, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_syn7s"]
size = Vector2(500, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4kwoh"]
size = Vector2(250, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rkgm8"]
size = Vector2(70, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1we4n"]
size = Vector2(70, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_88gp8"]
size = Vector2(250, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cubhk"]
size = Vector2(20, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gq3h5"]
size = Vector2(20, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rl0bd"]
size = Vector2(20, 150)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrykp"]
size = Vector2(20, 150)

[node name="Room" type="Node2D"]
texture_filter = 1
script = ExtResource("1_4eumd")

[node name="CaveBackground" type="ColorRect" parent="."]
z_index = -10
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="CrocTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(400, 170)
texture = ExtResource("1_lkoor")

[node name="Ladder" parent="." instance=ExtResource("3_lx5xs")]
visible = false

[node name="TopLeftWall" type="StaticBody2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, 283)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="TopLeftWall"]
scale = Vector2(2.5, 4.1)
texture = SubResource("CompressedTexture2D_c4kmj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopLeftWall"]
shape = SubResource("RectangleShape2D_u0v2g")

[node name="TopRightWall" type="Area2D" parent="."]
texture_filter = 1
position = Vector2(775, 283)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopRightWall"]
shape = SubResource("RectangleShape2D_vpkyf")

[node name="LeftWall" type="StaticBody2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(100, 482)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
scale = Vector2(2.5, 4.1)
texture = ExtResource("4_a60m6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource("RectangleShape2D_s2tk7")

[node name="RightWall" type="StaticBody2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(700, 482)
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
scale = Vector2(2.5, 4.1)
texture = ExtResource("4_a60m6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
shape = SubResource("RectangleShape2D_blwk7")

[node name="Bottom" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Bottom"]
offset_top = 539.0
offset_right = 800.0
offset_bottom = 554.0
color = Color(0.709804, 0.721569, 0.121569, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(400, 546)
shape = SubResource("RectangleShape2D_h0q65")

[node name="NoHoles" type="Node2D" parent="."]

[node name="Surface-NoHoles" type="StaticBody2D" parent="NoHoles"]
collision_mask = 0

[node name="ColorRect" type="ColorRect" parent="NoHoles/Surface-NoHoles"]
offset_top = 340.0
offset_right = 800.0
offset_bottom = 384.0
color = Color(1, 0.992157, 0.211765, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoHoles/Surface-NoHoles"]
position = Vector2(400, 362)
shape = SubResource("RectangleShape2D_b6uba")

[node name="Ground" type="ColorRect" parent="NoHoles"]
offset_top = 384.0
offset_right = 800.0
offset_bottom = 424.0
color = Color(0.709804, 0.721569, 0.121569, 1)

[node name="OneHole" type="Node2D" parent="."]
visible = false

[node name="Surface-OneHole" type="StaticBody2D" parent="OneHole"]
collision_mask = 0

[node name="ColorRect" type="ColorRect" parent="OneHole/Surface-OneHole"]
offset_top = 340.0
offset_right = 800.0
offset_bottom = 384.0
color = Color(1, 0.992157, 0.211765, 1)

[node name="HoleLip" type="ColorRect" parent="OneHole/Surface-OneHole"]
z_index = 15
offset_left = 375.0
offset_top = 375.0
offset_right = 425.0
offset_bottom = 384.0
color = Color(1, 0.992157, 0.211765, 1)

[node name="Hole" type="ColorRect" parent="OneHole/Surface-OneHole"]
offset_left = 375.0
offset_top = 350.0
offset_right = 425.0
offset_bottom = 375.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OneHole/Surface-OneHole"]
position = Vector2(122, 362)
shape = SubResource("RectangleShape2D_rq74i")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OneHole/Surface-OneHole"]
position = Vector2(678, 362)
shape = SubResource("RectangleShape2D_syn7s")

[node name="Ground" type="ColorRect" parent="OneHole"]
z_index = -3
offset_top = 384.0
offset_right = 800.0
offset_bottom = 424.0
color = Color(0.709804, 0.721569, 0.121569, 1)

[node name="Hole" type="ColorRect" parent="OneHole"]
z_index = -2
offset_left = 375.0
offset_top = 384.0
offset_right = 425.0
offset_bottom = 424.0
color = Color(0, 0, 0, 1)

[node name="ThreeHoles" type="Node2D" parent="."]
visible = false

[node name="Surface-ThreeHoles" type="StaticBody2D" parent="ThreeHoles"]
collision_mask = 0

[node name="ColorRect" type="ColorRect" parent="ThreeHoles/Surface-ThreeHoles"]
offset_top = 340.0
offset_right = 800.0
offset_bottom = 384.0
color = Color(1, 0.992157, 0.211765, 1)

[node name="Hole1" type="ColorRect" parent="ThreeHoles/Surface-ThreeHoles"]
offset_left = 225.0
offset_top = 350.0
offset_right = 300.0
offset_bottom = 375.0
color = Color(0, 0, 0, 1)

[node name="Hole2" type="ColorRect" parent="ThreeHoles/Surface-ThreeHoles"]
offset_left = 375.0
offset_top = 350.0
offset_right = 425.0
offset_bottom = 375.0
color = Color(0, 0, 0, 1)

[node name="HoleLip" type="ColorRect" parent="ThreeHoles/Surface-ThreeHoles"]
z_index = 15
offset_left = 375.0
offset_top = 375.0
offset_right = 425.0
offset_bottom = 384.0
color = Color(1, 0.992157, 0.211765, 1)

[node name="Hole3" type="ColorRect" parent="ThreeHoles/Surface-ThreeHoles"]
offset_left = 500.0
offset_top = 350.0
offset_right = 575.0
offset_bottom = 375.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThreeHoles/Surface-ThreeHoles"]
position = Vector2(100, 362)
shape = SubResource("RectangleShape2D_4kwoh")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="ThreeHoles/Surface-ThreeHoles"]
position = Vector2(335, 362)
shape = SubResource("RectangleShape2D_rkgm8")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="ThreeHoles/Surface-ThreeHoles"]
position = Vector2(465, 362)
shape = SubResource("RectangleShape2D_1we4n")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="ThreeHoles/Surface-ThreeHoles"]
position = Vector2(700, 362)
shape = SubResource("RectangleShape2D_88gp8")

[node name="Ground" type="ColorRect" parent="ThreeHoles"]
z_index = -3
offset_top = 384.0
offset_right = 800.0
offset_bottom = 424.0
color = Color(0.709804, 0.721569, 0.121569, 1)

[node name="Hole1" type="ColorRect" parent="ThreeHoles"]
offset_left = 225.0
offset_top = 384.0
offset_right = 300.0
offset_bottom = 424.0
color = Color(0, 0, 0, 1)

[node name="Hole2" type="ColorRect" parent="ThreeHoles"]
z_index = -2
offset_left = 375.0
offset_top = 384.0
offset_right = 425.0
offset_bottom = 424.0
color = Color(0, 0, 0, 1)

[node name="Hole3" type="ColorRect" parent="ThreeHoles"]
offset_left = 500.0
offset_top = 384.0
offset_right = 575.0
offset_bottom = 424.0
color = Color(0, 0, 0, 1)

[node name="DynamicItems" type="Node" parent="."]
script = ExtResource("5_1xq4r")

[node name="ExitTopLeft" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitTopLeft"]
position = Vector2(0, 270)
shape = SubResource("RectangleShape2D_cubhk")

[node name="ExitTopRight" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitTopRight"]
position = Vector2(800, 270)
shape = SubResource("RectangleShape2D_gq3h5")

[node name="ExitBottomLeft" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitBottomLeft"]
position = Vector2(0, 460)
shape = SubResource("RectangleShape2D_rl0bd")

[node name="ExitBottomRight" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitBottomRight"]
position = Vector2(800, 460)
shape = SubResource("RectangleShape2D_lrykp")

[connection signal="body_entered" from="TopRightWall" to="." method="_on_top_right_wall_body_entered"]
[connection signal="body_entered" from="ExitTopLeft" to="." method="_on_exit_top_left_body_entered"]
[connection signal="body_entered" from="ExitTopRight" to="." method="_on_exit_top_right_body_entered"]
[connection signal="body_entered" from="ExitBottomLeft" to="." method="_on_exit_bottom_left_body_entered"]
[connection signal="body_entered" from="ExitBottomRight" to="." method="_on_exit_bottom_right_body_entered"]
